--- a/index/css/index_style.css
+++ b/index/css/index_style.css
@@ -40,3 +40,14 @@
     top: 3px;
     right: 29px;
 }
+
+/*********************  ng-invalid & ng-touched *************************/
+input.ng-invalid.ng-touched {
+    border: 1px solid #da3637;
+}
+input.ng-valid.ng-touched {
+    border: 1px solid #509d12;
+}
+.Stageerror {
+    padding-top: 10px;
+}
